# tmux-time-tracker

./: .env  Cargo.toml  README.md  tmux.db
migrations/: 20230507142636_initial.sql  20230507152735_unique-index.sql
src/: lib.rs  main.rs  session_tracker.rs
