[package]
name = "tmux-time-tracker"
version = "0.1.2"
edition = "2021"
description = "Tracks the time spent attached to tmux session"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.28.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
dirs = "3.0.2"
