[package]
name = "tmux-time-tracker"
version = "0.1.3"
edition = "2021"
description = "Tracks the time spent attached to tmux session"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.28.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
dirs = "3.0.2"
fern = "0.6.2"
log = "0.4.17"

